Fix unit price/sale badge spacing

--- a/assets/component-card.css
+++ b/assets/component-card.css
@@ -5,7 +5,13 @@
 }
 
 .card + .card-information {
-  margin-top: 2rem;
+  margin-top: 1.3rem;
+}
+
+@media screen and (min-width: 750px) {
+  .card + .card-information {
+    margin-top: 1.7rem;
+  }
 }
 
 .card.card--soft {
@@ -172,7 +178,6 @@
 
 .card-information__wrapper > .price {
   color: rgb(var(--color-foreground));
-  padding-top: 0.4rem;
 }
 
 .card-information__wrapper > *:not(.visually-hidden:first-child) + * {
