--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -262,6 +262,7 @@ a.product__text {
 
 .product .price {
   align-items: flex-start;
+  gap: 1rem;
 }
 
 .product .price--sold-out .price__badge-sold-out {
